--- a/css/index.scss
+++ b/css/index.scss
@@ -118,6 +118,7 @@ body{
                 background: #f3eb64;
                 border-radius: REM(10);
                 overflow: hidden;
+                position: relative;
                 video{
                     width: 100%;
 
@@ -955,6 +956,44 @@ body{
     }
 }
 
+.brandCover{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    .brandBox{
+        width:70%;
+        padding: 5%;
+        background: #fff;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        position: absolute;
+        border-radius: 10px;
+        .close{
+            width: REM(45);
+            height: REM(45);
+            border-radius: 100%;
+            background: #fff;
+            color: #000;
+            position: absolute;
+            right: REM(-20);
+            top: REM(-20);
+            text-align: center;
+        }
+        img{
+            width: 80%;
+            margin: 0 auto;
+        }
+        h3{
+            text-align: center;
+            font-size: REM(28);
+            color: #000;
+            padding-bottom: REM(10);
+        }
+    }
+}
 
 .tipBox{
     width:100%;
