--- a/css/index.scss
+++ b/css/index.scss
@@ -1092,3 +1092,103 @@ body{
     -webkit-box-shadow: inset 0 0 5px #eeeeee;
     background-color: #eeeeee;
 }
+
+
+.hengfu{
+    position:absolute;
+    top:5%;
+    width:REM(334);
+    left:50%;
+    margin-left:REMTWO(334);
+}
+.plain{
+    width:REM(116);
+    position:absolute;
+    left:100%;
+    top:6.5%;
+}
+.area_2 .hengfu{
+    top:2%;
+}
+.area_2 .plain{
+    top:3.5%;
+}
+.area_3 .hengfu{
+    top:1%;
+}
+.area_3 .plain{
+    top:1.5%;
+}
+.area_4 .hengfu{
+    top:1%;
+}
+.area_4 .plain{
+    top:1.5%;
+}
+@keyframes fadeInLeft {
+    0% {
+        opacity: 1;
+        transform: translate3d(-800%,0,0)
+    }
+
+    to {
+        opacity: 1;
+        transform: none
+    }
+}
+@-webkit-keyframes fadeInLeft {
+    0% {
+        opacity: 1; 
+        -webkit-transform: translate3d(-800%,0,0)
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: none
+    }
+}
+.fadeInLeft {
+    animation: fadeInLeft 3s linear both;
+}
+
+@keyframes fadeInLeft2 {
+    0% {
+        opacity: 1;
+        transform: translate3d(-200%,0,0)
+    }
+
+    to {
+        opacity: 1;
+        transform: none
+    }
+}
+@-webkit-keyframes fadeInLeft2 {
+    0% {
+        opacity: 1; 
+        -webkit-transform: translate3d(-200%,0,0)
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: none
+    }
+}
+.fadeInLeft2 {
+    animation: fadeInLeft2 2.3s linear both;
+}
+
+/*氢气球上下动效果*/
+.floatupdown {-webkit-animation:floatupdown  2s 3s linear infinite;}
+@-webkit-keyframes floatupdown {
+    0% {
+        -webkit-transform: translate( 0,0 )
+    }
+
+    50% {
+        -webkit-transform: translate( 0,10px)
+    }
+
+    100% {
+        -webkit-transform: translate( 0,0 )
+    }
+}
