--- a/css/index.scss
+++ b/css/index.scss
@@ -149,29 +149,29 @@ body{
                         white-space: nowrap;
                         overflow: hidden;
                         text-overflow: ellipsis;
+                        // &:nth-child(1){
+                        //     flex-basis: 20%;
+                        //     b{
+                        //         width: REM(40);
+                        //         height: REM(40);
+                        //         background: #f3eb64;
+                        //         border-radius: 100%;
+                        //         color: #d01100;
+                        //         display: block;
+                        //         text-align: center;
+                        //         line-height: REM(40);
+                        //     }
+                        // }
                         &:nth-child(1){
-                            flex-basis: 20%;
-                            b{
-                                width: REM(40);
-                                height: REM(40);
-                                background: #f3eb64;
-                                border-radius: 100%;
-                                color: #d01100;
-                                display: block;
-                                text-align: center;
-                                line-height: REM(40);
-                            }
-                        }
-                        &:nth-child(2){
                             flex-basis: 30%;
                             img{
                                 width: REM(80);
                             }
                         }
-                        &:nth-child(3){
-                            flex-basis: 25%;
+                        &:nth-child(2){
+                            flex-basis: 50%;
                         }
-                        &:nth-child(4){
+                        &:nth-child(3){
                             flex-basis: 25%;
                             text-align: right;
                         }
